test/semantic-errors/20.pas
program p;
begin var a:array[1]of real;
a[0]:=1;
end.
